[gd_scene load_steps=31 format=2]

[ext_resource path="res://hitHurt2.wav" type="AudioStream" id=1]
[ext_resource path="res://charge01.wav" type="AudioStream" id=2]
[ext_resource path="res://walk.wav" type="AudioStream" id=3]
[ext_resource path="res://Sago.gd" type="Script" id=4]
[ext_resource path="res://boss01.png" type="Texture" id=5]
[ext_resource path="res://pickupCoin.wav" type="AudioStream" id=6]
[ext_resource path="res://sago_speed2.png" type="Texture" id=7]
[ext_resource path="res://sago_normal.png" type="Texture" id=8]
[ext_resource path="res://preJump3.wav" type="AudioStream" id=9]
[ext_resource path="res://bigJump.wav" type="AudioStream" id=10]
[ext_resource path="res://laserShoot.wav" type="AudioStream" id=11]
[ext_resource path="res://barrier.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 48, 120 )

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "coin"
length = 0.3
tracks/0/type = "audio"
tracks/0/path = NodePath("../SfxPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 6 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=16]
resource_name = "jump"
length = 0.4
tracks/0/type = "audio"
tracks/0/path = NodePath("../SfxPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=15]
resource_name = "preJump"
length = 0.7
tracks/0/type = "audio"
tracks/0/path = NodePath("../SfxPlayer/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.960784, 0.305882, 1, 1 ) ]
}

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "charge"
length = 0.6
tracks/0/type = "audio"
tracks/0/path = NodePath("../SfxPlayer2/AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=14]
resource_name = "normal_sago"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 8 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "speed_sago"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, 0 ) ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sago/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barrier:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "charge"
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "crash"
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 1 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 0 ),
"update": 0,
"values": [ Color( 0.976471, 0.231373, 0.231373, 1 ), Color( 0.976471, 0.231373, 0.231373, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Barrier:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "explode"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer2D")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0 )
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "explode_mid_air"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "normal"
length = 0.1
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 3 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.960784, 1, 0.509804, 0.219608 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "jump"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.373336 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.709804, 0.262745, 0.933333, 0.423529 ), Color( 0.886275, 0.784314, 0.988235, 0.403922 ), Color( 0.709804, 0.262745, 0.933333, 0.423529 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "normal"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.960784, 1, 0.509804, 0.423529 ), Color( 0.933333, 0.364706, 0.364706, 0.403922 ), Color( 0.960784, 1, 0.509804, 0.423529 ) ]
}

[node name="Sago" type="RigidBody2D" groups=["Sago"]]
z_index = -10
collision_layer = 2
mode = 2
gravity_scale = 5.0
contacts_reported = 3
contact_monitor = true
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
speed = 1000
super_speed = 2400
impulse_power = 3000
attack_power = 100

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 3 )

[node name="SpinnyTiimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="SfxPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/RESET = SubResource( 17 )
anims/coin = SubResource( 11 )
anims/jump = SubResource( 16 )
anims/preJump = SubResource( 15 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SfxPlayer"]
stream = ExtResource( 9 )
volume_db = -9.0

[node name="SfxPlayer2" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/RESET = SubResource( 18 )
anims/charge = SubResource( 19 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SfxPlayer2"]
stream = ExtResource( 2 )

[node name="SpritePlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/RESET = SubResource( 12 )
anims/normal_sago = SubResource( 14 )
anims/speed_sago = SubResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 10 )
anims/charge = SubResource( 4 )
anims/crash = SubResource( 6 )
anims/explode = SubResource( 20 )
anims/normal = SubResource( 5 )

[node name="RayCast2DL" type="RayCast2D" parent="."]
position = Vector2( -48, -112 )
enabled = true
cast_to = Vector2( 0, -50 )

[node name="RayCast2DR" type="RayCast2D" parent="."]
position = Vector2( 48, -112 )
enabled = true
cast_to = Vector2( 0, -50 )

[node name="barrierPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Barrier")
anims/RESET = SubResource( 21 )
anims/jump = SubResource( 23 )
anims/normal = SubResource( 22 )

[node name="Barrier" type="Sprite" parent="."]
visible = false
modulate = Color( 0.960784, 1, 0.509804, 0.219608 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 12 )

[connection signal="body_entered" from="." to="." method="_on_Sago_body_entered"]
[connection signal="timeout" from="SpinnyTiimer" to="." method="_on_SpinnyTiimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
